# Oak-16x

./: .gitignore  CMakeLists.txt  Oak-16.iss  README.MD  main.cpp  make.bat  res.rc  resource.res  window.manifest
